# firecrawler

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONSOLIDATE-ENV.md  MCP-PRD.md  README.md  SELF_HOST.md  defaults.example.yaml  defaults.yaml  docker-compose.yaml  docs.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  mcp_development_guide.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
apps/api/: .env.example  package.json  pnpm-lock.yaml  temp-test-check.ts
apps/api/native/: package.json
apps/api/src/: index.ts
apps/api/src/__tests__/e2e/: yaml-config.test.ts
apps/api/src/__tests__/helpers/: test-server.ts  wait-utils.ts
apps/api/src/__tests__/snips/: github-metadata-extraction.test.ts
apps/api/src/__tests__/snips/v2/: crawl.test.ts
apps/api/src/__tests__/unit/: config-service.test.ts  config-validator.test.ts  defaults-middleware.test.ts  vector-search-yaml.test.ts
apps/api/src/controllers/: auth.ts
apps/api/src/controllers/v1/: crawl.ts  types.ts
apps/api/src/controllers/v2/: batch-scrape.ts  crawl.ts  map.ts  scrape.ts  types.ts  vector-search.ts
apps/api/src/lib/: config-validator.ts  embedding-utils.ts  generic-ai.ts  html-to-markdown.ts  language-filter.ts  markdown-cleanup.ts  metadata-extraction.ts  pdf-utils.ts  ranker.ts  robots-txt.ts  scrape-billing.ts  scrapeTimeout.ts  similarity.ts  strings.ts
apps/api/src/lib/__tests__/: markdown-cleanup.test.ts  metadata-extraction.test.ts
apps/api/src/lib/extract/usage/: llm-cost.ts  model-prices.ts
apps/api/src/lib/providers/: tei-provider.ts
apps/api/src/lib/security/: audit-logger.ts
apps/api/src/lib/utils/: doc-id-parser.ts  env-utils.ts
apps/api/src/lib/utils/__tests__/: doc-id-parser.test.ts
apps/api/src/lib/yaml-config/: initialize.ts
apps/api/src/routes/: shared.ts  v1.ts  v2.ts
apps/api/src/scraper/WebScraper/: crawler.ts
apps/api/src/scraper/scrapeURL/engines/: index.ts
apps/api/src/scraper/scrapeURL/engines/fire-engine/: checkStatus.ts  scrape.ts
apps/api/src/scraper/scrapeURL/engines/index/: index.ts
apps/api/src/scraper/scrapeURL/engines/pdf/: index.ts
apps/api/src/scraper/scrapeURL/lib/: removeUnwantedElements.ts
apps/api/src/scraper/scrapeURL/transformers/: index.ts  index.ts.backup  performEmbeddings.ts
apps/api/src/scripts/: generate-config.ts
apps/api/src/search/: fireEngine.ts
apps/api/src/search/v2/: vector-search.ts
apps/api/src/search/v2/types/: vector-search.types.ts
apps/api/src/services/: config-service.ts  system-monitor.ts  vector-storage.ts
apps/api/src/shared/: content-schemas.ts  content-types.ts
apps/firecrawler/: .env.deprecated  .env.example  .gitignore  .pre-commit-config.yaml  ENV_MIGRATION.md  README.md  fastmcp.json  pyproject.toml  test_extract_combined.py
apps/firecrawler/docs/: MCP_SERVER.md  MIDDLEWARE.md  PROMPTS.md  RESOURCES.md  TESTING.md  TOOLS.md
apps/firecrawler/docs/fastmcp/: cli.md  context.md  decorating-methods.md  logging.md  middleware.md  progress.md  prompts.md  resources.md  running-server.md  self-hosted.md  server-configuration.md  server.md  tests.md
apps/firecrawler/firecrawl_mcp/: __init__.py  server.py
apps/firecrawler/firecrawl_mcp/core/: CLAUDE.md  __init__.py  client.py  config.py  exceptions.py
apps/firecrawler/firecrawl_mcp/middleware/: CLAUDE.md  __init__.py  error_handling.py  logging.py  rate_limit.py  timing.py
apps/firecrawler/firecrawl_mcp/prompts/: CLAUDE.md  __init__.py  prompts.py
apps/firecrawler/firecrawl_mcp/resources/: CLAUDE.md  __init__.py  resources.py  resources_backup.py
apps/firecrawler/firecrawl_mcp/services/: CLAUDE.md  __init__.py  base.py
apps/firecrawler/firecrawl_mcp/tests/: CLAUDE.md  __init__.py  conftest.py  test_batch_scrape.py  test_batch_status.py  test_core.py  test_crawl.py  test_crawl_status.py  test_error_handling.py  test_extract.py  test_firerag.py  test_firesearch.py  test_logging.py  test_map.py  test_prompts.py  test_rate_limit.py  test_resources.py  test_scrape.py  test_timing.py
apps/firecrawler/firecrawl_mcp/tools/: CLAUDE.md  __init__.py  crawl.py  extract.py  firerag.py  firesearch.py  map.py  scrape.py  types_simplified.py
apps/js-sdk/firecrawl/: package-lock.json
apps/js-sdk/firecrawl/src/v2/: client.ts  types.ts
apps/js-sdk/firecrawl/src/v2/__tests__/: vector-search.test.ts
apps/js-sdk/firecrawl/src/v2/methods/: vector-search.ts
apps/nuq-postgres/: Dockerfile
apps/nuq-postgres/migrations/: 001_add_vector_support.sql  002_create_document_vectors.sql
apps/python-sdk/firecrawl/v2/: client.py  client_async.py  types.py
apps/python-sdk/firecrawl/v2/methods/: __init__.py  vector_search.py
apps/python-sdk/firecrawl/v2/methods/aio/: vector_search.py
apps/python-sdk/firecrawl/v2/utils/: http_client.py
docs/: ENVIRONMENT_VARIABLES.md  MIGRATION_GUIDE.md  README.md  TEI_PGVECTOR_SETUP.md  api-configuration-examples.md  configuration-guide.md  database-architecture.md  database-cleanup-guide.md  language-filtering-guide.md  troubleshooting-guide.md  vector-search-api.md
docs/plans/firecrawl-mcp-vector-search/: requirements.md
scripts/: extract-env-vars.py
